--- a/app/frontend/events/templates/fast_add_event.jade
+++ b/app/frontend/events/templates/fast_add_event.jade
@@ -1,5 +1,5 @@
-h3 New event
-form.uk-form-stacked.event-form
+h3(data-ng-bind="$faeCtrl.modeTitle" data-ng-show="$faeCtrl.preparing == 0")
+form.uk-form-stacked.event-form(data-ng-show="$faeCtrl.preparing == 0")
     div.uk-margin-medium-bottom
         div.uk-form-row
             label Title
@@ -18,8 +18,8 @@ form.uk-form-stacked.event-form
         div.uk-form-row(data-ng-class="{ 'selectize-input-danger' : $faeCtrl.event.errors.assigned_by }")
             input(type="text"
                   config="{ maxItems: 1, placeholder: 'Assign by', valueField: 'id', labelField: 'title' }"
-                  options="$faeCtrl.users"
-                  data-ng-model="$faeCtrl.event.assigned_by"
+                  options="$faeCtrl.users.collection"
+                  data-ng-model="$faeCtrl.event.assigned_by.id"
                   selectize)
             div.error.uk-text-danger.uk-margin-top-remove.uk-text-right(data-ng-bind="$faeCtrl.event.errors.assigned_by[0]")
         div.uk-form-row
@@ -45,7 +45,10 @@ form.uk-form-stacked.event-form
                               md-input)
             div.error.uk-text-danger.uk-margin-top-remove.uk-text-right(data-ng-bind="$faeCtrl.event.errors.description[0]")
 div.uk-text-right
-    md-preloader.uk-float-left(success width="35" height="35" stroke-Width="6" data-ng-if="$faeCtrl.loading")
+    md-preloader.uk-float-left(success width="35" height="35" stroke-Width="6" data-ng-if="$faeCtrl.loading || $faeCtrl.preparing > 0")
+    div.uk-float-left.uk-margin-small-top.uk-margin-large-left(data-ng-if="$faeCtrl.preparing > 0")
+        h3 Preparing...
     button.md-btn.md-btn-flat.uk-modal-close(type="button" data-ng-click="closeThisDialog()") Close
-    button#snippet_new_save.md-btn.md-btn-flat.md-btn-flat-primary(type="button" data-ng-click="$faeCtrl.save()") Create
-
+    button#snippet_new_save.md-btn.md-btn-flat.md-btn-flat-primary.ng-hide(type="button" data-ng-click="$faeCtrl.save()" data-ng-show="$faeCtrl.preparing == 0")
+        span(data-ng-hide="$faeCtrl.event.id") Create
+        span(data-ng-show="$faeCtrl.event.id") Save
