Optimized scss. Removed unusable plugins

--- a/app/frontend/app.scss
+++ b/app/frontend/app.scss
@@ -1,67 +1,3 @@
-// html {
-//     overflow: hidden !important;
-// }
-
-// #main_view {
-//     height: 100% !important;
-//     & > div {
-//         height: 100% !important;
-//         & > #page_content {
-//             // height: 100% !important;
-//             overflow-y: scroll;
-//         }
-//     }
-// }
-
-.td-text-overflow {
-    max-width: 200px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.td-nowrap {
-    white-space: nowrap;
-}
-
-html {
-}
-
-.object-card {
-    li {
-        padding-top: 5px !important;
-    }
-}
-
-
-table.status-border-left tr {
-    border-left: 3px solid transparent;
-    &.danger {
-        border-left-color: #e53935;
-    }
-}
-
-.uk-datepicker {
-    z-index: 10001 !important;
-}
-
-h5.datetime-header {
-    font-weight: 400;
-    color: #727272;
-    padding-left: 3px;
-    margin-top: 12px;
-}
-
-.event-form {
-    .selectize-input {
-        padding-left: 3px !important;
-    }
-}
-
-.selectize-input-danger > .selectize-control > .selectize-input {
-    border-color: #e53935;
-}
-
-uk-datepicker {
-    z-index: 10094 !important;
-}
+@import '../../node_modules/uikit/dist/css/uikit.almost-flat.css';
+@import './assets/template/stylesheets/main.css';
+@import './assets/template/icons/flags/flags.css';
